1. Метод .of [#465397]